# commonplace-backend

./: README  README.md  alam_api_testing_guide.md  alembic.ini  pyproject.toml  qdrant_config.yaml  requirements.txt  review.md
alembic/: env.py
alembic/versions/: 01a95779f641_add_feedback_logs_relationship_to_user_.py  05eae4dc8523_add_user_role.py  180531b39479_add_timestamps_to_roles.py  197e32638c27_initial_migration.py  20240319_initial_migration.py  3a50a88f2f70_add_user_roles_table.py  3fc234392ec9_add_feedback_logs_relationship_to_user_.py  408c8a638df3_updated_user_table.py  4fa061538df5_initial_migration.py  72242b89be99_initial_migration.py  747a6ab087f7_add_feedback_logs_relationship_to_user_.py  8240aaf5b3cb_initial_migration.py  949ed1c495d8_adding_files_table.py  95e77bd48ba1_change_userrole_id_to_uuid.py  9d10641b3ed9_add_role_table_in_db.py  __init__.py  a246e3890caf_initial_migration.py  a2ff8502d989_initial_migration.py  a73891f140ec_initial_migration.py  a823df47e570_initial_migration.py  b23928e081b6_relations.py  ba70d460c5bf_role_relation_in_user_table.py  c23fc75cbcf4_database_structure_comeplte.py  c919ff4425a9_initial_migration.py  cb5d94e54751_fix_foreign_key_issue_with_user_id.py  dc74883351bf_add_timestamps_to_roles.py  dc76cfbb7c7b_initial_migration.py  e927dfadd681_initial_migration.py  e97c03cf2da6_initial_migration.py  ee69b66c05ab_add_user_role.py  f14361eb972d_initial_migration.py  fe66c44c34e4_your_message.py  ff4663088e1c_initial_migration.py  fix_scraping_tables.py
app/: __init__.py  main.py
app/api/endpoints/: memory.py
app/api/v1/: __init__.py  api.py  memory.py
app/core/: cache.py  chatbot_vector_store.py  config.py  init_rbac.py  rbac.py  security.py  source_registry.py  storage.py  utils.py  vector_store.py
app/db/: database.py  dependencies.py
app/docs/: api_documentation.md
app/middleware/: activity_middleware.py
app/models/: Diagnostic.py  LanguageTest.py  __init__.py  activity.py  arbitration.py  audio_file.py  base.py  business.py  chat_history.py  chatbot.py  comprehension_log.py  feedback_log.py  files.py  grammar_log.py  integration.py  learning_module.py  lesson.py  licenskey.py  memory.py  profile.py  pronunciation_log.py  role.py  roleplay_session.py  scraped_content.py  scraping_source.py  subai_log.py  ticket.py  ticket_models.py  users.py  vocabulary_log.py
app/schemas/: Language_test.py  business.py  common.py  files.py  learning.py  licens.py  mcp.py  memory.py  role.py  subai.py  ticket.py  user.py
app/services/: avatar.py  business.py  chatbot_service.py  email.py  github.py  memory_service.py  rbac.py  redis_service.py  role.py  room127.py  s3.py  ticket.py  tts.py  whisper_parse.py
app/templates/email/: ticket_assignment.html
app/utils/: folder_classifier.py
commonplace/: requirements.txt
commonplace/alembic/: env.py
commonplace/alembic/versions/: 5459d8f268dc_initial_migration.py
commonplace/app/: main.py
commonplace/app/models/: users.py
(+26 files in other folders)
