[project]
name = "commonplace"
version = "0.1.0"
description = ""
authors = [
    {name = "junaid114",email = "junaid8597@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "fastapi (>=0.68.0)",
    "sqlalchemy (>=1.4.23)",
    "alembic (>=1.7.1)",
    "python-dotenv (>=0.19.0)",
    "psycopg2-binary (>=2.9.1)",
    "pyjwt (==2.10.1)",
    "python-jose[cryptography] (>=3.3.0)",
    "openai (==1.76)",
    "email-validator (==2.1.0.post1)",
    "python-multipart (>=0.0.5)",
    "passlib[bcrypt] (>=1.7.4)",
    "bcrypt (==4.3.0)",
    "boto3 (==1.34.59)",
    "aiofiles (==23.2.1)",
    "pydantic (>=1.8.2)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "jinja2 (==3.1.2)",
    "azure-cognitiveservices-speech (==1.31.0)",
    "edge-tts (==6.1.9)",
    "speechrecognition (==3.10.0)",
    "pydub (==0.25.1)",
    "jieba (==0.42.1)",
    "typer (>=0.12.3)",
    "redis (>=4.0.0)",
    "qdrant-client (>=1.1.1)",
    "sentence-transformers (>=2.2.2)",
    "torch (>=2.0.0)",
    "numpy (>=1.21.0)",
    "pydantic-settings (>=2.0.0)",
    "pypinyin (==0.49.0)"
]

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
