[tool.poetry]
name = "commonplace-backend"
version = "0.1.0"
packages = [{ include = "app" }]
description = ""
authors = ["junaid114 <junaid8597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
uvicorn = ">=0.15.0"
fastapi = ">=0.68.0"
sqlalchemy = ">=1.4.23"
alembic = ">=1.7.1"
python-dotenv = ">=0.19.0"
psycopg2-binary = ">=2.9.1"
pyjwt = "2.10.1"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
openai = "1.76"
email-validator = "2.1.0.post1"
python-multipart = ">=0.0.5"
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
bcrypt = "4.3.0"
boto3 = "1.34.59"
aiofiles = "23.2.1"
pydantic = ">=1.8.2"
ffmpeg-python = ">=0.2.0,<0.3.0"
jinja2 = "3.1.2"
azure-cognitiveservices-speech = "1.31.0"
edge-tts = "6.1.9"
SpeechRecognition = "3.10.0"
pydub = "0.25.1"
jieba = "0.42.1"
pypinyin = "0.49.0"
typer = ">=0.12.3"
redis = ">=4.0.0"
qdrant-client = ">=1.1.1"
sentence-transformers = ">=2.2.2"
torch = ">=2.0.0"
numpy = ">=1.21.0"
pydantic-settings = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"